WebHelpers ChangeLog
====================

1.3 (unreleased)
----------------

* Documentation:
  
  - Some ``webhelpers.misc`` helpers were undocumented.
  
  - Spelling corrections throughout, done by Marius Gedminas.

* webhelpers.date:

  - Adjust test in 'test_date.py' to account for leap years. (#61, reported
    by Andrey Rahmatullin / wrar)

* webhelpers.html.grid:

   - Add 'request' and 'url_generator' args to support paged display,
     following the latest Paginate precedent.
  
* webhelpers.paginate:

  - Support page parameter in the route path (e.g., "/help/page5") when using
    Routes explicit mode without a URL generator.

* setup.py:

   - Fix typo in test requirements. (#60, Andrey Rahmatullin/wrar)

1.2 (2010-08-18)
----------------

* WebHelpers now depends on MarkupSafe. ``literal`` and ``escape`` now use it.
  
* webhelpers.html.builder:

  - ``literal`` and ``escape`` now use MarkupSafe, which has a C speedup for
    escaping, escapes single-quotes for security, and adds new methods to
    ``literal``. Compatibility should not be a problem; but see the docs if
    you encounter any edge cases.

* webhelpers.html.tags:

  - For new HTML 5 input fields, the ``text`` helper has a "type" argument.

  - Don't put an "id" attribute on a hidden fields generated by the ``form()``
    helper, including the magic ``_method`` field. The IDs will clash if there
    are multiple forms on the page.

* webhelpers.html.tools:

  - Preserve case of "method" arg in ``button_to()`` for XHTML compatibility. 
    Patch by transducer.

* webhelpers.text:

  - Urlencode ``urlify`` return value in case it contains special
    characters like "?". Reported by mcd34@gmail.com.

* webhelpers.util:

  - Fix bug in ``update_params`` in handling existing query strings. Support
    multiple values per parameter.

1.1 (2010-08-09)
----------------

* webhelpers.paginate:

  - Remove stray Routes import. (Other conditional Routes imports remain for